# Dify

./: LICENSE  pyproject.toml  requirements.txt
app/apis/: auth_api.py  dify_api.py  vocabulary_api.py
app/core/: config.py
app/db/: models.py
app/dify_integration/: dify_utils.py
app/security/: auth_security.py
app/services/: dify_workflow_service.py
backend/: test.db
backend/app/: main.py
backend/app/crud/: user_crud.py  vocabulary_crud.py
backend/app/db/: database.py
backend/app/schemas/: user_schemas.py  vocabulary_schemas.py
